--- a/src/faq.css
+++ b/src/faq.css
@@ -55,3 +55,8 @@
     margin-right: 0.3rem;
   }
 }
+@media (max-width: 520px) {
+    .faqContainer {
+      margin-top: -30rem;
+    }
+  }
