--- a/src/footer.css
+++ b/src/footer.css
@@ -19,3 +19,10 @@
     margin-right: 0.3rem;
   }
 }
+
+@media (max-width: 362px) {
+    .footerContainer {
+      margin-left: 0.1rem;
+      margin-right: 0.1rem;
+    }
+  }
